--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
 </head>
-
 <body>
   <header class="page-header">
     <h1 class="visually-hidden">Device-интернет магазин электронных гаджетов</h1>
     <img class="logo" src="#" alt="логотип device" />
     <form class="search" action="#" method="post">
-      <input class="site-search" type="#" name="site-search-active" placeholder="Поиск по сайту">
+      <input class="site-search" type="text" name="site-search-active" placeholder="Поиск по сайту">
       <input class="site-search-button" type="submit" value="найти">
     </form>
     <nav class="navigation-customer">
@@ -85,16 +83,17 @@
   </header>
   <main class="main-index main-container">
     <section class="slide-one">
-      <h2 class="visually-hidden">Описание квадрокоптера</h2>
-      <div class="number-slide">
-        <span class="visually-hidden">Номер слайда</span>
-      </div>
-      <div class="product-slider">
-        <img class="products-site" src="#" alt="Фото квадрокоптера">
+      <h2 class="visually-hidden">Слайдер товаров</h2>
+      <div class="product-slide-one product-slide-show">
+        <div class="number-slide-one">
+          <span class="visually-hidden">Номер слайда</span>
+        </div>
+        <img class="products-site" width="560" height="560" src="#" alt="Фото квадрокоптера">
         <div class="product-description">
           <h3 class="product-slogan">Порхает как бабочка,<br> жалит как пчела!</h3>
-          <p class="full-product-description">Этот обычный, на первый взгляд, квадрокоптер оснащён<br> мощным лазером, замаскированным под стандартную камеру.</p>
-          <a class="more-details" href="#" >Подробнее</a>
+          <p class="full-product-description">Этот обычный, на первый взгляд, квадрокоптер оснащён<br> мощным лазером,
+            замаскированным под стандартную камеру.</p>
+          <a class="more-details" href="#">Подробнее</a>
           <ul class="product-characteristics-list">
             <li class="product-characteristics-item">
               <p class="main-characteristic">800 м</p>
@@ -105,16 +104,221 @@
               <p class="description-characteristic">Радиус поражения</p>
             </li>
           </ul>
-          <div class="slider-buttons">
-            <button class="slider-button-one current" type="button" aria-label="Первый слайд"></button>
-            <button class="slider-button-two" type="button" aria-label="Второй слайд"></button>
-            <button class="slider-button-three" type="button" aria-label="Третий слайд"></button>
-          </div>
+        </div>
+      </div>
+      <div class="product-slide-two">
+        <div class="number-slide-two">
+          <span class="visually-hidden">Номер слайда</span>
+        </div>
+        <img class="products-site" width="560" height="560" src="#" alt="Фото фитнес браслета">
+        <div class="product-description">
+          <h3 class="product-slogan">Худеем <br> правильно!</h3>
+          <p class="full-product-description">Мотивирующие фитнес-браслеты помогут найти в себе силы <br> не пропускать
+            занятия и соблюдать диету.</p>
+          <a class="more-details" href="#">Подробнее</a>
+          <ul class="product-characteristics-list">
+            <li class="product-characteristics-item">
+              <p class="main-characteristic">48 часов</p>
+              <p class="description-characteristic">Без подзарядки</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="product-slide-three">
+        <div class="number-slide-three">
+          <span class="visually-hidden">Номер слайда</span>
+        </div>
+        <img class="products-site" width="560" height="560" src="#" alt="Фото самой длинной селфи палки">
+        <div class="product-description">
+          <h3 class="product-slogan">Делай селфи, <br> как Бен Стиллер! </h3>
+          <p class="full-product-description">Самая длинная палка для селфи доступна в нашем магазине. <br> Восемь
+            (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
+          <a class="more-details" href="#">Подробнее</a>
+          <ul class="product-characteristics-list">
+            <li class="product-characteristics-item">
+              <p class="main-characteristic">8,5 м</p>
+              <p class="description-characteristic">Длина палки</p>
+            </li>
+            <li class="product-characteristics-item">
+              <p class="main-characteristic">5 кг</p>
+              <p class="description-characteristic">Вес палки</p>
+            </li>
+            <li class="product-characteristics-item">
+              <p class="main-characteristic">Карбон</p>
+              <p class="description-characteristic">Материал</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="slider-buttons">
+        <button class="slider-button-one current" type="button" aria-label="Первый слайд"></button>
+        <button class="slider-button-two" type="button" aria-label="Второй слайд"></button>
+        <button class="slider-button-three" type="button" aria-label="Третий слайд"></button>
+      </div>
+    </section>
+    <section class="product-categories">
+      <h2 class="visually-hidden">Перечень товаров</h2>
+      <ul class="product-categories-list">
+        <li class="product-categories-item">
+          <img class="product-picture" width="97" height="55" src="#" alt="картинка товара">
+          <p class="name-categories">Виртуальная реальность</p>
+        </li>
+        <li class="product-categories-item">
+          <img class="product-picture" width="86" height="117" src="#" alt="картинка товара">
+          <p class="name-categories">Моноподы для селфи</p>
+        </li>
+        <li class="product-categories-item">
+          <img class="product-picture" width="71" height="87" src="#" alt="картинка товара">
+          <p class="name-categories">Экшн-камеры</p>
+        </li>
+        <li class="product-categories-item">
+          <img class="product-picture" width="108" height="65" src="#" alt="картинка товара">
+          <p class="name-categories">Фитнес-браслеты</p>
+        </li>
+        <li class="product-categories-item">
+          <img class="product-picture" width="56" height="99" src="#" alt="картинка товара">
+          <p class="name-categories">Умные часы</p>
+        </li>
+        <li class="product-categories-item">
+          <img class="product-picture" width="132" height="69" src="#" alt="картинка товара">
+          <p class="name-categories">Квадрокоптеры</p>
+        </li>
+      </ul>
+    </section>
+    <section class="advantages-shop">
+      <h2 class="visually-hidden">Преимущества магазина</h2>
+      <ul class="purchase-terms-list">
+        <li class="purchase-terms-item purchase-terms-active">Доставка</li>
+        <li class="purchase-terms-item">Гарантия</li>
+        <li class="purchase-terms-item">Кредит</li>
+      </ul>
+      <div class="tab-one tab-active">
+        <h3 class="name-tab">Доставка</h3>
+        <p class="tab-description">Мы с удовольствием доставим ваш товар <br> прямо к вашему подъезду совершенно
+          бесплатно! Ведь <br> мы неплохо заработаем, поднимая его на ваш этаж.</p>
+        <img class="description-picture" width="136" height="164" src="#" alt="Картинка доставки">
+      </div>
+      <div class="tab-two ">
+        <h3 class="name-tab">Гарантия</h3>
+        <p class="tab-description">Если из-за возгорания купленного у нас товара у вас <br> сгорит дом — не переживайте,
+          мы выдадим вам новый. <br> Товар, не дом, конечно же.</p>
+        <img class="description-picture" width="171" height="195" src="#" alt="Картинка гарантии">
+      </div>
+      <div class="tab-three ">
+        <h3 class="name-tab">Кредит</h3>
+        <p class="tab-description">Залезть в долговую яму стало проще! Кредитные <br> консультанты подберут для вас
+          наиболее выгодные <br> условия кредита. Выгодные для банка, разумеется.</p>
+        <img class="description-picture" width="156" height="188" src="#" alt="Картинка кредита">
+      </div>
+    </section>
+    <section class="delivery">
+      <h2 class="visually-hidden">Доставка</h2>
+      <div class="delivery-terms">
+        <p class="delivery-capabilities">Доставим редкий товар под заказ</p>
+        <div class="info">
+          <span class="visually-hidden">Посмотреть дополнительную информацию</span>
         </div>
       </div>
     </section>
-
+    <div class="index-columns">
+      <section class="about-us">
+        <h2 class="about-us-title">О нас</h2>
+        <p class="about-us-subtitle">Огромный выбор гаджетов не оставит равнодушным <br> гика, который есть в каждом из
+          нас.</p>
+        <p class="about-us-subtitle">Мы можем доставить ваш товар в самые отдалённые <br> уголки России транспортными
+          компаниями:</p>
+        <ul class="transport-company-list">
+          <li class="transport-company-item">Меловые линии</li>
+          <li class="transport-company-item">СДИК</li>
+          <li class="transport-company-item">ТоксБерри</li>
+        </ul>
+        <a class="button-index-columns" href="#">Подробнее о нас</a>
+      </section>
+      <section class="contact">
+        <h2 class="contact-title">Контакты</h2>
+        <p class="contact-subtitle">Вы можете забрать товар сами, заехав в наш офис.<br> Заодно сможете проверить
+          работоспособность покупки</p>
+        <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
+        <address class="contacts-address">
+          <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+          <a class="contacts-phone" href="tel:8812812-12-12">8 (812) 812-12-12</a>
+        </address>
+        <h3 class="contacts-subtitle">Время работы</h3>
+        <ul class="contacts-schedule">
+          <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
+          <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
+        </ul>
+        <a class="button-index-columns" href="#">Напишите нам</a>
+      </section>
+    </div>
+    <div class="subscription-index">
+      <h2 class="subscription-head subscription-head-index">Подпишитесь на рассылку</h2>
+      <p class="spam-free-subscription spam-free-subscription-index">Еженедельный дайджест с обзорами новинок, <br>
+        длительными тест-драйвами, распаковками, а также акции, <br> спецпредложения и вот это вот всё.</p>
+      <form class="form-subscription" action="https://echo.htmlacademy.ru/" method="post">
+        <input class="form-yourmail error" type="email" name="yourmail" placeholder="Ваш e-mail" required>
+        <input class="subscribe-button" type="submit" value="подписаться">
+      </form>
+      <p class="mailing">Это бесплатно</p>
+    </div>
   </main>
-</body>
+  <footer class="main-footer">
+    <div class="contact-footer">
 
+      <img class="logo-footer" src="#" alt="логотип device" />
+      <p class="store-address">Санкт-Петербург, набережная <br> реки Карповки, 5, литера П.</p>
+    </div>
+    <div class="footer-navigation">
+      <ul class="footer-navigation-list">
+        <li class="footer-navigation-item">
+          <a href="#" class="footer-navigation-link">Доставка</a>
+        </li>
+        <li class="footer-navigation-item">
+          <a href="#" class="footer-navigation-link">Гарантия</a>
+        </li>
+        <li class="footer-navigation-item">
+          <a href="#" class="footer-navigation-link">Контакты</a>
+        </li>
+      </ul>
+      <ul class="socials-list">
+        <li class="socials-item">
+          <a class="socials-link" href="https://facebook.com/htmlacademy">
+            <svg class="socials-icon" width="10" height="18" viewBox="0 0 10 18" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7 0a4 4 0 0 0-4 4v2H0v4h3v8h4v-8h3V6H7V4h3V0H7Z"></path>
+            </svg>
+            <span class="visually-hidden">Фейсбук</span>
+          </a>
+        </li>
+        <li class="socials-item">
+          <a class="socials-link" href="https://facebook.com/htmlacademy">
+            <svg class="socials-icon" width="10" height="18" viewBox="0 0 10 18" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7 0a4 4 0 0 0-4 4v2H0v4h3v8h4v-8h3V6H7V4h3V0H7Z"></path>
+            </svg>
+            <span class="visually-hidden">Интстаграм</span>
+          </a>
+        </li>
+        <li class="socials-item">
+          <a class="socials-link" href="https://twitter.com/htmlacademy_ru">
+            <svg class="socials-icon" width="18" height="15" viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M11.6.2c1.8-.5 3.2.3 3.8 1.2l2.1-.7c0 .9-.6 1.5-.9 1.8.7.1 1.4-.6 1.4-.6a3 3 0 0 1-1.7 2C16.1 10.7 13 15.1 5.7 15h-.5c-.4 0-4.4-.5-5.2-1.9 2.4.2 4.1-.4 5-1.2-1-.3-2.9-.4-3.2-2.9.4.1.6.2 1.3.1C1.8 8.3.4 7.5.5 5.3c.3.3 1.1.5 1.4.5C1.1 5.6-.2 2.5.9.9a11 11 0 0 0 7.6 3.8C8.7 2.3 9.7.8 11.6.2Z">
+              </path>
+            </svg>
+            <span class="visually-hidden">Твиттер</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="container-contacts-phone">
+    <a class="contacts-phone" href="tel:88121234567">Тел.:+7 (812) 812-12-12</a>
+    <a class="logo-htmlacademy" href="https://htmlacademy.ru/" target="_blank" aria-label="htmlacademy">
+      <svg width="115" height="34" viewBox="0 0 115 34" xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M0 12.9v2.6h2.5v-2.6H0ZM11.6 4.5c-1.6 0-2.8.7-3.6 1.7h-.1V0h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.4c.1-3-1.8-4.9-4.5-4.9ZM26.6 4.8h-4.8V1.1h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V6.8h4.8v-2ZM41.1 4.6c-1.6 0-2.9.8-3.5 2.1h-.1a3.7 3.7 0 0 0-3.4-2.1c-1.4 0-2.5.8-3.1 1.8h-.1V4.8H29v10.6h2V10c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2V9.8c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V8.9c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 12.7c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V0h-2v12.7ZM28.9 19.7a4.9 4.9 0 0 0-3.9-1.8c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3 3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6 1.6 0 2.8 1 3.3 2.2h2.1V22ZM55.1 19.7a4.9 4.9 0 0 0-3.9-1.8c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 19.8a5 5 0 0 0-3.9-1.9c-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.4h-2v6.4Zm-3.6 7.3a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 17.9a5.4 5.4 0 0 0-5.5 5.6c0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5a3.2 3.2 0 0 1 3.2-2.6ZM98.2 17.9a4 4 0 0 0-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z">
+        </path>
+      </svg>
+    </a>
+  </div>
+  </footer>
+</body>
 </html>
