--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 <body>
   <header class="page-header">
     <h1 class="visually-hidden">Device-интернет магазин электронных гаджетов</h1>
-    <img class="logo" src="#" alt="логотип device" />
+    <img class="logo" width="145" height="36" src="../1205835-device-32/img/device.png" alt="логотип device" />
     <form class="search" action="#" method="post">
       <input class="site-search" type="text" name="site-search-active" placeholder="Поиск по сайту">
       <input class="site-search-button" type="submit" value="найти">
@@ -46,14 +46,14 @@
               <ul class="header-popup-list">
                 <li class="header-popup-item">
                   <div class="list-product-one" tabindex="1">
-                    <img class="popup-foto" src="#" width="41" height="43" alt="Фото любительской селфи-палки">
+                    <img class="popup-foto" src="../1205835-device-32/img/product-1-small.png" width="41" height="43" alt="Фото любительской селфи-палки">
                     <p class="popup-name-product">Любительская селфи-палка</p>
                   </div>
                   <button class="popup-basket" type="submit" aria-label="Закрыть"><svg class="close-icon" aria-hidden="true" role="img" width="41" height="43" viewBox="0 0 41 43"></svg></button>
                 </li>
                 <li class="header-popup-item">
                   <div class="list-product-one" tabindex="1">
-                    <img class="popup-foto" src="#" width="41" height="43" alt="Фото профессиональной селфи-палка">
+                    <img class="popup-foto" src="../1205835-device-32/img/product-2-small.png" width="41" height="43" alt="Фото профессиональной селфи-палка">
                     <p class="popup-name-product">Профессиональная селфи-палка</p>
                   </div>
                   <button class="popup-basket" type="submit" aria-label="Закрыть"><svg class="close-icon" aria-hidden="true" role="img" width="41" height="43" viewBox="0 0 41 43"></svg></button>
