--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <header class="page-header">
     <h1 class="visually-hidden">Device-интернет магазин электронных гаджетов</h1>
-    <img class="logo" src="#" alt="логотип device" />
+    <img class="logo" width="145" height="36" src="../1205835-device-32/img/device.png" alt="логотип device" />
     <form class="search" action="#" method="post">
       <input class="site-search" type="text" name="site-search-active" placeholder="Поиск по сайту">
       <input class="site-search-button" type="submit" value="найти">
@@ -40,14 +40,14 @@
               <ul class="header-popup-list">
                 <li class="header-popup-item">
                   <div class="list-product-one" tabindex="1">
-                    <img class="popup-foto" src="#" width="41" height="43" alt="Фото любительской селфи-палки">
+                    <img class="popup-foto" src="../1205835-device-32/img/product-1-small.png" width="41" height="43" alt="Фото любительской селфи-палки">
                     <p class="popup-name-product">Любительская селфи-палка</p>
                   </div>
                   <button class="popup-basket" type="submit" aria-label="Закрыть"><svg class="close-icon" aria-hidden="true" role="img" width="41" height="43" viewBox="0 0 41 43"></svg></button>
                 </li>
                 <li class="header-popup-item">
                   <div class="list-product-one" tabindex="1">
-                    <img class="popup-foto" src="#" width="41" height="43" alt="Фото профессиональной селфи-палка">
+                    <img class="popup-foto" src="../1205835-device-32/img/product-2-small.png" width="41" height="43" alt="Фото профессиональной селфи-палка">
                     <p class="popup-name-product">Профессиональная селфи-палка</p>
                   </div>
                   <button class="popup-basket" type="submit" aria-label="Закрыть"><svg class="close-icon" aria-hidden="true" role="img" width="41" height="43" viewBox="0 0 41 43"></svg></button>
@@ -120,7 +120,7 @@
         <button class="slide-button slide-previous-page" type="button">
           <span class="visually-hidden">Предыдущая страница</span>
         </button>
-        <img class="products-site" width="560" height="560" src="#" alt="Фото квадрокоптера">
+        <img class="products-site" width="560" height="560" src="../1205835-device-32/img/slider-1.jpg" alt="Фото квадрокоптера">
         <button class="slide-button slide-next-page" type="button">
           <span class="visually-hidden">Следующая страница</span>
         </button>
@@ -150,7 +150,7 @@
           <button class="slide-button slide-previous-page" type="button">
             <span class="visually-hidden">Предыдущая страница</span>
           </button>
-        <img class="products-site" width="560" height="560" src="#" alt="Фото фитнес браслета">
+        <img class="products-site" width="560" height="560" src="../1205835-device-32/img/slider-2.jpg" alt="Фото фитнес браслета">
         <button class="slide-button slide-next-page" type="button">
           <span class="visually-hidden">Следующая страница</span>
         </button>
@@ -176,7 +176,7 @@
           <button class="slide-button slide-previous-page" type="button">
             <span class="visually-hidden">Предыдущая страница</span>
           </button>
-        <img class="products-site" width="560" height="560" src="#" alt="Фото самой длинной селфи палки">
+        <img class="products-site" width="560" height="560" src="../1205835-device-32/img/slider-3.jpg" alt="Фото самой длинной селфи палки">
         <button class="slide-button slide-next-page" type="button">
           <span class="visually-hidden">Следующая страница</span>
         </button>
@@ -212,27 +212,27 @@
       <h2 class="visually-hidden">Перечень товаров</h2>
       <ul class="product-categories-list">
         <li class="product-categories-item">
-          <img class="product-picture" width="97" height="55" src="#" alt="картинка товара">
+          <img class="product-picture" width="97" height="55" src="../1205835-device-32/img/VR.png" alt="картинка товара">
           <p class="name-categories">Виртуальная реальность</p>
         </li>
         <li class="product-categories-item">
-          <img class="product-picture" width="86" height="117" src="#" alt="картинка товара">
+          <img class="product-picture" width="86" height="117" src="../1205835-device-32/img/Mono.png" alt="картинка товара">
           <p class="name-categories">Моноподы для селфи</p>
         </li>
         <li class="product-categories-item">
-          <img class="product-picture" width="71" height="87" src="#" alt="картинка товара">
+          <img class="product-picture" width="71" height="87" src="../1205835-device-32/img/Camera.png" alt="картинка товара">
           <p class="name-categories">Экшн-камеры</p>
         </li>
         <li class="product-categories-item">
-          <img class="product-picture" width="108" height="65" src="#" alt="картинка товара">
+          <img class="product-picture" width="108" height="65" src="../1205835-device-32/img/Fitnes.png" alt="картинка товара">
           <p class="name-categories">Фитнес-браслеты</p>
         </li>
         <li class="product-categories-item">
-          <img class="product-picture" width="56" height="99" src="#" alt="картинка товара">
+          <img class="product-picture" width="56" height="99" src="../1205835-device-32/img/watch.png" alt="картинка товара">
           <p class="name-categories">Умные часы</p>
         </li>
         <li class="product-categories-item">
-          <img class="product-picture" width="132" height="69" src="#" alt="картинка товара">
+          <img class="product-picture" width="132" height="69" src="../1205835-device-32/img/Kopter.png" alt="картинка товара">
           <p class="name-categories">Квадрокоптеры</p>
         </li>
       </ul>
@@ -248,19 +248,19 @@
         <h3 class="name-tab">Доставка</h3>
         <p class="tab-description">Мы с удовольствием доставим ваш товар <br> прямо к вашему подъезду совершенно
           бесплатно! Ведь <br> мы неплохо заработаем, поднимая его на ваш этаж.</p>
-        <img class="description-picture" width="136" height="164" src="#" alt="Картинка доставки">
+        <img class="description-picture" width="136" height="164" src="../1205835-device-32/img/delivery 2.png" alt="Картинка доставки">
       </div>
-      <div class="tab-two ">
+      <div class="tab-two">
         <h3 class="name-tab">Гарантия</h3>
         <p class="tab-description">Если из-за возгорания купленного у нас товара у вас <br> сгорит дом — не переживайте,
           мы выдадим вам новый. <br> Товар, не дом, конечно же.</p>
-        <img class="description-picture" width="171" height="195" src="#" alt="Картинка гарантии">
+        <img class="description-picture" width="171" height="195" src="../1205835-device-32/img/warranty 1.png" alt="Картинка гарантии">
       </div>
-      <div class="tab-three ">
+      <div class="tab-three">
         <h3 class="name-tab">Кредит</h3>
         <p class="tab-description">Залезть в долговую яму стало проще! Кредитные <br> консультанты подберут для вас
           наиболее выгодные <br> условия кредита. Выгодные для банка, разумеется.</p>
-        <img class="description-picture" width="156" height="188" src="#" alt="Картинка кредита">
+        <img class="description-picture" width="156" height="188" src="../1205835-device-32/img/credit 1.png" alt="Картинка кредита">
       </div>
     </section>
     <section class="delivery">
