--- a/catalog.html
+++ b/catalog.html
@@ -3,60 +3,60 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
   <header class="page-header">
     <h1 class="visually-hidden">Device-интернет магазин электронных гаджетов</h1>
-    <img class="logo" width="145" height="36" src="../1205835-device-32/img/device.png" alt="логотип device" />
+    <img class="logo" width="145" height="36" src="img/device.png" alt="логотип device" />
     <form class="search" action="#" method="post">
+      <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m15.7 14.3-3.1-3.1A7 7 0 0 0 7 0a7 7 0 0 0-7 7 7 7 0 0 0 11.2 5.6l3.1 3.1c.2.2.4.3.7.3.6 0 1-.4 1-1a1 1 0 0 0-.3-.7ZM2 7a5 5 0 0 1 5-5 5 5 0 0 1 5 5 5 5 0 0 1-5 5 5 5 0 0 1-5-5Z" fill="#000"/></svg>
       <input class="site-search" type="text" name="site-search-active" placeholder="Поиск по сайту">
       <input class="site-search-button" type="submit" value="найти">
     </form>
     <nav class="navigation-customer">
-        <ul class="user-list">
-          <li class="user-item">
-            <a href="#" class="user-link">
-              <svg></svg>
-              <p class="user-text">Коля Петухов</p>
-            </a>
-          </li>
-          <li class="user-item">
-            <a href="#" class="user-link">
-              <svg></svg>
-              <p class="user-text user-text-active">Выйти</p>
-            </a>
-          </li>
-        </ul>
+      <ul class="user-list">
+        <li class="user-item">
+          <a href="#" class="user-link">
+            <p class="user-text">Коля Петухов</p>
+          </a>
+        </li>
+        <li class="user-item">
+          <a href="#" class="user-link">
+            <p class="user-text-enter">Выйти</p>
+          </a>
+        </li>
+      </ul>
       <ul class="customer-list">
         <li class="customer-navigation-item">
           <a href="#" class="customer-navigation-link">
-            <svg></svg>
-            <p class="customer-text">Сравнить</p>
+            <p class="customer-compare-text">Сравнить</p>
           </a>
         </li>
         <li class="customer-navigation-item">
           <a href="#" class="customer-navigation-link">
             <span class="cart-number">2</span>
-            <svg></svg>
-            <p class="customer-text">Корзина</p>
+            <p class="customer-cart-text">Корзина</p>
           </a>
-          <div class="popup">
+          <div class="popup visually-hidden">
             <div class="popup-wrapper">
               <h2 class="visually-hidden">Корзина</h2>
               <ul class="header-popup-list">
                 <li class="header-popup-item">
                   <div class="list-product-one" tabindex="1">
-                    <img class="popup-foto" src="../1205835-device-32/img/product-1-small.png" width="41" height="43" alt="Фото любительской селфи-палки">
+                    <img class="popup-foto" src="img/product-1-small.png" width="41" height="43" alt="Фото любительской селфи-палки">
                     <p class="popup-name-product">Любительская селфи-палка</p>
                   </div>
-                  <button class="popup-basket" type="submit" aria-label="Закрыть"><svg class="close-icon" aria-hidden="true" role="img" width="41" height="43" viewBox="0 0 41 43"></svg></button>
+                  <button class="popup-basket" type="submit" aria-label="Закрыть">
+                    <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m11 1-1-1-4.5 4.5L1 0 0 1l4.5 4.5L0 10l1 1 4.5-4.5L10 11l1-1-4.5-4.5L11 1Z" fill="#fff"/></svg></button>
                 </li>
                 <li class="header-popup-item">
                   <div class="list-product-one" tabindex="1">
-                    <img class="popup-foto" src="../1205835-device-32/img/product-2-small.png" width="41" height="43" alt="Фото профессиональной селфи-палка">
+                    <img class="popup-foto" src="img/product-2-small.png" width="41" height="43" alt="Фото профессиональной селфи-палка">
                     <p class="popup-name-product">Профессиональная селфи-палка</p>
                   </div>
-                  <button class="popup-basket" type="submit" aria-label="Закрыть"><svg class="close-icon" aria-hidden="true" role="img" width="41" height="43" viewBox="0 0 41 43"></svg></button>
+                  <button class="popup-basket" type="submit" aria-label="Закрыть">
+                    <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m11 1-1-1-4.5 4.5L1 0 0 1l4.5 4.5L0 10l1 1 4.5-4.5L10 11l1-1-4.5-4.5L11 1Z" fill="#fff"/></svg></button>
                 </li>
               </ul>
               <div class="basket-amount">
@@ -75,7 +75,7 @@
         <a class="submenu-plus-minus">
           <span class="visually-hidden">Увидеть список каталога товаров</span>
         </a>
-        <div class="catalog-submenu">
+        <div class="catalog-submenu visually-hidden">
           <ul class="submene-list">
             <li class="submenu-item">
               <a class="product-name" href="#">Виртуальная реальность</a>
@@ -116,49 +116,26 @@
     </div>
   </header>
   <main class="main-container">
-    <h1 class="visually-hidden">Каталог товар</h1>
     <section class="catalog-inner">
       <h2 class="catalog-inner-title">Моноподы для селфи</h2>
       <ul class="breadcrumbs-list">
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="index.html">Главная</a>
         </li>
-        <li class="breadcrumbs-item"><svg width="5" height="8" viewBox="0 0 5 8" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <g opacity=".3" clip-path="url(#a)">
-              <path
-                d="M4.8 3.6 1 .2C.8 0 .4 0 .1.2-.2.4-.1.8.1 1l3.3 3L.2 7c-.2.2-.2.6 0 .8l.4.2.4-.2 3.8-3.4c.3-.2.3-.6 0-.8Z"
-                fill="#fff"></path>
-            </g>
-            <defs>
-              <clipPath id="s">
-                <path fill="#fff" d="M0 0h5v8H0z"></path>
-              </clipPath>
-            </defs>
-          </svg></li>
+        <li class="breadcrumbs-item">
+          <svg width="4" height="7" viewBox="0 0 4 7" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m3.8 3.1-3-3a.5.5 0 0 0-.7 0C0 .3 0 .7.1.9l2.6 2.6L.1 6.1v.7l.4.2.4-.1 3-3 .1-.4-.2-.4Z" fill="#000"/></svg></li>
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="index.html">Каталог товаров</a>
         </li>
-        <li class="breadcrumbs-item"><svg width="5" height="8" viewBox="0 0 5 8" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <g opacity=".3" clip-path="url(#a)">
-              <path
-                d="M4.8 3.6 1 .2C.8 0 .4 0 .1.2-.2.4-.1.8.1 1l3.3 3L.2 7c-.2.2-.2.6 0 .8l.4.2.4-.2 3.8-3.4c.3-.2.3-.6 0-.8Z"
-                fill="#fff"></path>
-            </g>
-            <defs>
-              <clipPath id="w">
-                <path fill="#fff" d="M0 0h5v8H0z"></path>
-              </clipPath>
-            </defs>
-          </svg></li>
+        <li class="breadcrumbs-item">
+          <svg width="4" height="7" viewBox="0 0 4 7" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m3.8 3.1-3-3a.5.5 0 0 0-.7 0C0 .3 0 .7.1.9l2.6 2.6L.1 6.1v.7l.4.2.4-.1 3-3 .1-.4-.2-.4Z" fill="#000"/></svg></li>
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="index.html">Моноподы для селфи</a>
         </li>
       </ul>
     </section>
     <section class="filters">
-      <h2 class="visually-hidden">Фильтор подбора товаров</h2>
+      <h2 class="sorting-title">Фильтр:</h2>
       <form class="catalog-form" action="https://echo.htmlacademy.ru/" method="get">
         <fieldset class="catalog-filter-group catalog-filter-price">
           <legend class="catalog-filter-title">Стоимость</legend>
@@ -253,9 +230,9 @@
           <div class="select">
             <label class="visually-hidden" for="sorting">Сортировка</label>
             <select class="select-control" id="sorting" name="sorting">
-              <option value="popular">Сначала популярные</option>
-              <option value="cheap">Средний диапазон</option>
-              <option value="expensive">Сначала дорогое</option>
+              <option class="select-control-text" value="popular">Сначала популярные</option>
+              <option class="select-control-text" value="cheap">Средний диапазон</option>
+              <option class="select-control-text" value="expensive">Сначала дорогое</option>
             </select>
           </div>
           <button class="visually-hidden" type="submit">Отсортировать продукты</button>
@@ -277,7 +254,7 @@
     <section class="cards">
       <ul class="cards-list">
         <li class="cards-item">
-          <a class="product-card-image" href="#"><img src="#" width="360" height="380" alt="фотография любительская селфи-палка"></a>
+          <a class="product-card-image" href="#"><img src="img/product-1.jpg" width="360" height="380" alt="фотография любительская селфи-палка"></a>
           <div class="product-subtitle">
             <h3 class="product-card-title">Любительская селфи-палка</h3>
             <p class="product-card-subtitle">500 ₽</p>
@@ -286,7 +263,7 @@
           <span class="label-new">new</span>
         </li>
         <li class="cards-item">
-          <a class="product-card-image" href="#"><img src="#" width="360" height="380" alt="фотография любительская селфи-палка"></a>
+          <a class="product-card-image" href="#"><img src="img/product-2.jpg" width="360" height="380" alt="фотография любительская селфи-палка"></a>
           <div class="product-subtitle">
             <h3 class="product-card-title">Профессиональная селфи-палка</h3>
             <p class="product-card-subtitle">1 500 ₽</p>
@@ -295,7 +272,7 @@
           <span class="label-new">new</span>
         </li>
         <li class="cards-item">
-          <a class="product-card-image" href="#"><img src="#" width="360" height="380" alt="фотография любительская селфи-палка"></a>
+          <a class="product-card-image" href="#"><img src="img/product-3.jpg" width="360" height="380" alt="фотография любительская селфи-палка"></a>
           <div class="product-subtitle">
             <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
             <p class="product-card-subtitle">2 500 ₽</p>
@@ -304,7 +281,7 @@
           <span class="label-new">new</span>
         </li>
         <li class="cards-item">
-          <a class="product-card-image" href="#"><img src="#" width="360" height="380" alt="фотография любительская селфи-палка"></a>
+          <a class="product-card-image" href="#"><img src="img/product-4.jpg" width="360" height="380" alt="фотография любительская селфи-палка"></a>
           <div class="product-subtitle">
             <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
             <p class="product-card-subtitle">4 900 ₽</p>
@@ -342,60 +319,48 @@
   </main>
   <footer class="main-footer">
     <div class="contact-footer">
-      <img class="logo-footer" src="#" alt="логотип device" />
+      <img class="logo-footer" src="img/device-footer.png" alt="логотип device" />
       <p class="store-address">Санкт-Петербург, набережная <br> реки Карповки, 5, литера П.</p>
     </div>
     <div class="footer-navigation">
       <ul class="footer-navigation-list">
         <li class="footer-navigation-item">
-          <a href="#" class="footer-navigation-link">Доставка</a>
+          <a class="footer-navigation-link" href="#" >Доставка</a>
         </li>
         <li class="footer-navigation-item">
-          <a href="#" class="footer-navigation-link">Гарантия</a>
+          <a class="footer-navigation-link" href="#" >Гарантия</a>
         </li>
         <li class="footer-navigation-item">
-          <a href="#" class="footer-navigation-link">Контакты</a>
+          <a class="footer-navigation-link" href="#" >Контакты</a>
         </li>
       </ul>
       <ul class="socials-list">
         <li class="socials-item">
           <a class="socials-link" href="https://facebook.com/htmlacademy">
-            <svg class="socials-icon" width="10" height="18" viewBox="0 0 10 18" xmlns="http://www.w3.org/2000/svg">
-              <path d="M7 0a4 4 0 0 0-4 4v2H0v4h3v8h4v-8h3V6H7V4h3V0H7Z"></path>
-            </svg>
+            <svg class="socials" width="9" height="18" viewBox="0 0 9 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6.5 3H9V0H5.6C2.8 0 2 1.7 2 4.2V6H0v3h2v9h3V9h3.3l.6-3H5V4.5C5 3.7 5.3 3 6.5 3Z" fill="#444"/></svg>
             <span class="visually-hidden">Фейсбук</span>
           </a>
         </li>
         <li class="socials-item">
           <a class="socials-link" href="https://facebook.com/htmlacademy">
-            <svg class="socials-icon" width="10" height="18" viewBox="0 0 10 18" xmlns="http://www.w3.org/2000/svg">
-              <path d="M7 0a4 4 0 0 0-4 4v2H0v4h3v8h4v-8h3V6H7V4h3V0H7Z"></path>
-            </svg>
+            <svg class="socials" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.7 1.3c-.9-.9-2-1.3-3.4-1.3H4.7A4.5 4.5 0 0 0 0 4.7v6.6c0 1.4.4 2.6 1.4 3.4.9.9 2 1.3 3.3 1.3h6.6c1.4 0 2.6-.4 3.4-1.3a5 5 0 0 0 1.3-3.4V4.7c0-1.4-.4-2.6-1.3-3.4ZM8 12.1A4.1 4.1 0 0 1 3.9 8c0-2.3 1.9-4.1 4.1-4.1 2.2 0 4.1 1.8 4.1 4.1s-1.9 4.1-4.1 4.1Zm4.6-7.4c-.7 0-1.3-.5-1.3-1.3s.5-1.3 1.3-1.3c.7 0 1.3.6 1.3 1.3 0 .7-.6 1.3-1.3 1.3Z" fill="#444"/></svg>
             <span class="visually-hidden">Интстаграм</span>
           </a>
         </li>
         <li class="socials-item">
           <a class="socials-link" href="https://twitter.com/htmlacademy_ru">
-            <svg class="socials-icon" width="18" height="15" viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M11.6.2c1.8-.5 3.2.3 3.8 1.2l2.1-.7c0 .9-.6 1.5-.9 1.8.7.1 1.4-.6 1.4-.6a3 3 0 0 1-1.7 2C16.1 10.7 13 15.1 5.7 15h-.5c-.4 0-4.4-.5-5.2-1.9 2.4.2 4.1-.4 5-1.2-1-.3-2.9-.4-3.2-2.9.4.1.6.2 1.3.1C1.8 8.3.4 7.5.5 5.3c.3.3 1.1.5 1.4.5C1.1 5.6-.2 2.5.9.9a11 11 0 0 0 7.6 3.8C8.7 2.3 9.7.8 11.6.2Z">
-              </path>
-            </svg>
+            <svg class="socials" width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9.7.1c1.5-.5 2.6.3 3.2 1.1l1.7-.6a2 2 0 0 1-.8 1.6c.7.2 1.2-.4 1.2-.4-.1.9-.9 1.7-1.4 1.9-.2 6.3-2.8 10.4-8.9 10.3h-.4C4 14 .6 13.6 0 12.2c2 .2 3.4-.4 4.1-1.1-.8-.3-2.4-.4-2.6-2.8.3.2.5.3 1.1.2C1.5 7.7.3 7 .4 5c.3.3.9.5 1.2.4C1 5.2-.2 2.3.8.8c1.6 1.7 3.3 3.4 6.3 3.5.2-2.1 1-3.5 2.6-4.2Z" fill="#444"/></svg>
             <span class="visually-hidden">Твиттер</span>
           </a>
         </li>
       </ul>
     </div>
     <div class="container-contacts-phone">
-      <a class="contacts-phone" href="tel:88121234567">Тел.:+7 (812) 812-12-12</a>
-      <a class="logo-htmlacademy" href="https://htmlacademy.ru/" target="_blank" aria-label="htmlacademy">
-        <svg width="115" height="34" viewBox="0 0 115 34" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M0 12.9v2.6h2.5v-2.6H0ZM11.6 4.5c-1.6 0-2.8.7-3.6 1.7h-.1V0h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.4c.1-3-1.8-4.9-4.5-4.9ZM26.6 4.8h-4.8V1.1h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V6.8h4.8v-2ZM41.1 4.6c-1.6 0-2.9.8-3.5 2.1h-.1a3.7 3.7 0 0 0-3.4-2.1c-1.4 0-2.5.8-3.1 1.8h-.1V4.8H29v10.6h2V10c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2V9.8c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V8.9c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 12.7c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V0h-2v12.7ZM28.9 19.7a4.9 4.9 0 0 0-3.9-1.8c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3 3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6 1.6 0 2.8 1 3.3 2.2h2.1V22ZM55.1 19.7a4.9 4.9 0 0 0-3.9-1.8c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 19.8a5 5 0 0 0-3.9-1.9c-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.4h-2v6.4Zm-3.6 7.3a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 17.9a5.4 5.4 0 0 0-5.5 5.6c0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5a3.2 3.2 0 0 1 3.2-2.6ZM98.2 17.9a4 4 0 0 0-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z">
-          </path>
-        </svg>
-      </a>
-    </div>
+    <a class="contacts-phone" href="tel:88121234567">Тел.:+7 (812) 812-12-12</a>
+    <a class="logo-htmlacademy" href="https://htmlacademy.ru/" target="_blank" aria-label="htmlacademy">
+      <svg width="115" height="34" viewBox="0 0 115 34" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 12.9v2.6h2.5v-2.6H0ZM11.7 4.5c-1.6 0-2.8.7-3.6 1.7H8V0H6v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.4c.1-3-1.8-4.9-4.5-4.9ZM26.6 4.8h-4.8V1.1h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V6.8h4.8v-2ZM41.1 4.6c-1.6 0-2.9.8-3.5 2.1h-.1a3.7 3.7 0 0 0-3.4-2.1c-1.4 0-2.5.8-3.1 1.8h-.1V4.8H29v10.6h2V10c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2V9.8c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V8.9c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 12.7c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V0h-2v12.7ZM28.9 19.7a4.9 4.9 0 0 0-3.9-1.8c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3 3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6 1.6 0 2.8 1 3.3 2.2h2.1V22ZM55.1 19.7a4.9 4.9 0 0 0-3.9-1.8c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 19.8a5 5 0 0 0-3.9-1.9c-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.4h-2v6.4Zm-3.6 7.3a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 17.9a5.4 5.4 0 0 0-5.5 5.6c0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5a3.2 3.2 0 0 1 3.2-2.6ZM98.2 17.9a4 4 0 0 0-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" fill="#FFC700"/></svg>
+    </a>
+  </div>
   </footer>
 </body>
 </html>
