--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
     </section>
     <section class="advantages-shop">
       <h2 class="visually-hidden">Преимущества магазина</h2>
+
       <ul class="purchase-terms-list">
         <li class="purchase-terms-item purchase-terms-active">Доставка</li>
         <li class="purchase-terms-item">Гарантия</li>
@@ -279,17 +280,18 @@
       </ul>
       <div class="tab-one tab-active">
         <h3 class="name-tab">Доставка</h3>
+
         <p class="tab-description">Мы с удовольствием доставим ваш товар <br> прямо к вашему подъезду совершенно
           бесплатно! Ведь <br> мы неплохо заработаем, поднимая его на ваш этаж.</p>
-        <img class="description-picture" width="136" height="164" src="img/delivery-2.png" alt="Картинка доставки">
       </div>
-      <div class="tab-two">
+
+      <div class="tab-two visually-hidden">
         <h3 class="name-tab">Гарантия</h3>
         <p class="tab-description">Если из-за возгорания купленного у нас товара у вас <br> сгорит дом — не переживайте,
           мы выдадим вам новый. <br> Товар, не дом, конечно же.</p>
         <img class="description-picture" width="171" height="195" src="img/warranty-1.png" alt="Картинка гарантии">
       </div>
-      <div class="tab-three">
+      <div class="tab-three visually-hidden">
         <h3 class="name-tab">Кредит</h3>
         <p class="tab-description">Залезть в долговую яму стало проще! Кредитные <br> консультанты подберут для вас
           наиболее выгодные <br> условия кредита. Выгодные для банка, разумеется.</p>
