--- a/index.html
+++ b/index.html
@@ -339,14 +339,18 @@
       </section>
     </div>
     <div class="subscription-index">
-      <h2 class="subscription-head subscription-head-index">Подпишитесь на рассылку</h2>
+      <div class="subscription-wrapper">
+      <h2 class="subscription-head subscription-head-index">Подпишитесь <br> на рассылку</h2>
       <p class="spam-free-subscription spam-free-subscription-index">Еженедельный дайджест с обзорами новинок, <br>
         длительными тест-драйвами, распаковками, а также акции, <br> спецпредложения и вот это вот всё.</p>
-      <form class="form-subscription" action="https://echo.htmlacademy.ru/" method="post">
+      </div>
+      <div class="form-subscription-wrapper">
+        <form class="form-subscription" action="https://echo.htmlacademy.ru/" method="post">
         <input class="form-yourmail error" type="email" name="yourmail" placeholder="Ваш e-mail" required>
         <input class="subscribe-button" type="submit" value="подписаться">
       </form>
       <p class="mailing">Это бесплатно</p>
+    </div>
     </div>
   </main>
   <footer class="main-footer">
